--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portafolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Mrkdm.github.io/portafoio",
+  "homepage": "http://Mrkdm.github.io/portafolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
